Fix pagination overflow

--- a/baton/static/baton/app/src/styles/_pagination.scss
+++ b/baton/static/baton/app/src/styles/_pagination.scss
@@ -11,7 +11,6 @@
     border: 1px solid $pag-border-color;
     color: $pag-color;
     display: inline-block;
-    height: 40px;
     line-height: 40px;
     padding: 0 !important;
     text-align: center;
